# PgFluxAi

./: LICENSE  Makefile  README.md  clean_build.sh  logfile  pgai_build.sh  pgai_setup.sh  pyproject.toml  requirements.txt
pgai/: cli.py  pgai
pgai.egg-info/: SOURCES.txt  entry_points.txt
pgai/commands/: init_command.py  install_command.py  remove_command.py  run_command.py  start_command.py  status_command.py  stop_command.py
pgai/tests/: test_commands.py
pgai/utils/: helpers.py
src/: setup.py
src/pgflux/: cli.py  constants.py
src/pgflux.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/pgflux/commands/: init_command.py  start_command.py  status_command.py  stop_command.py
