[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pgai"
version = "0.1.0"
description = "A command-line interface for pgai functionality."
authors = [{ name="Your Name", email="your.email@example.com" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = ["click>=8.0.0"]

[project.scripts]
pgai = "pgai.cli:main"
